@@ -220,6 +220,7 @@ View manipulation:
 enter			Enter current line and scroll
 next			Move to next
 previous		Move to previous
+parent			Move to parent
 view-next		Move focus to next view
 refresh			Reload and refresh view
 maximize		Maximize the current view
@@ -285,7 +286,6 @@ toggle-refs		Toggle reference display
 status-update		Update file status
 status-merge		Resolve unmerged file
 stage-next		Find next chunk to stage
-tree-parent		Switch to parent directory in tree view
 edit			Open in editor
 ------------------------------------------------------------------------------
 
